5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4471/executions/1592_1800.log
== TEST (2019-04-01 15:31:59) 
-- CODE:
a=1
b=2
c=3
a+b+c=6
(a**2+b**2+c**2)//a+b+c
print(roundx,7)

-- ERROR:
File "XXXX", line 4
    a+b+c=6
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:32:10) 
-- CODE:
a=1
b=2
c=3
a+b+c=6
(a**2+b**2+c**2)//a+b+c
print(round)

-- ERROR:
File "XXXX", line 4
    a+b+c=6
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:32:25) 
-- CODE:
a=1
b=2
c=3
a+b+c=6
(a**2+b**2+c**2)//(a+b+c)
print(round)

-- ERROR:
File "XXXX", line 4
    a+b+c=6
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:32:46) 
-- CODE:
a=1
b=2
c=3

(a**2+b**2+c**2)//(a+b+c)
print(round)

-- OUTPUT:
<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:33:34) 
-- CODE:
a=1
b=2
c=3
d=(a+b+c)=6
(a**2+b**2+c**2)//(a+b+c)
print(round)

-- ERROR:
File "XXXX", line 4
    d=(a+b+c)=6
     ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:33:46) 
-- CODE:
a=1
b=2
c=3
(a+b+c)=6
(a**2+b**2+c**2)//(a+b+c)
print(round)

-- ERROR:
File "XXXX", line 4
    (a+b+c)=6
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:34:02) 
-- CODE:
a=1
b=2
c=3
(a+b+c)=6
(a**2+b**2+c**2)//(a+b+c)

-- ERROR:
File "XXXX", line 4
    (a+b+c)=6
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:40:51) 
-- CODE:
a=1
b=2
c=3
(a+b+c)=6
(a**2+b**2+c**2)/(a+b+c)

-- ERROR:
File "XXXX", line 4
    (a+b+c)=6
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:25) 
-- CODE:
a=1
b=2
c=3
var1=(a**2+b**2+c**2)/(a+b+c)
print(var1)

-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:43:13) 
-- CODE:
a=1
b=2
c=3
var1=(a**2+b**2+c**2)/(a+b+c)
print(var1)
round(var1,7)

-- OUTPUT:
2.3333333333333335
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:43:46) 
-- CODE:
a=1
b=2
c=3
var1=(a**2+b**2+c**2)/(a+b+c)
print(round(var1,7))

round(var1,7)

-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:45:59) 
-- CODE:
a=1
b=2
c=3
var1=(a**2+b**2+c**2)/(a+b+c)
print(round(var1,7))

round(var1,7)

-- EXECUTION TIME:
0.134556
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:46:10) 
-- CODE:
a=1
b=2
c=3
var1=(a**2+b**2+c**2)/(a+b+c)
print(round(var1,7))

round(var1,7)

-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:46:33) 
-- CODE:
a=1
b=2
c=3
var1=(a**2+b**2+c**2)/(a+b+c)
print(round(var1,7))

round(var1,7)

-- EXECUTION TIME:
0.147077
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:47:12) 
-- CODE:
a=1
b=2
c=3
var1=(a**2+b**2+c**2)/(a+b+c)
print(round(var1,7))

round(var1,7)

-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:47:35) 
-- CODE:
a=1
b=2
c=3
var1=(a**2+b**2+c**2)/(a+b+c)
print(round(var1,7))

round(var1,7)

-- EXECUTION TIME:
0.151363
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
2.3333333
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
2.3333333
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
2.3333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:48:00) 
-- CODE:
a=1
b=2
c=3
var1=(a**2+b**2+c**2)/(a+b+c)
print(round(var1,7))

round(var1,7)

-- OUTPUT:
2.3333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:49:47) 
-- CODE:
a=int( input("") )
b=int( input("") )
c=int( input("") )
var1=(a**2+b**2+c**2)/(a+b+c)
print(round(var1,7))

round(var1,7)

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:50:16) 
-- CODE:
a=int( input("digite a") )
b=int( input("digite b") )
c=int( input("digite c") )
var1=(a**2+b**2+c**2)/(a+b+c)
print(round(var1,7))

round(var1,7)

-- EXECUTION TIME:
0.187171
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:50:37) 
-- CODE:
a=int( input("digite a") )
b=int( input("digite b") )
c=int( input("digite c") )
var1=(a**2+b**2+c**2)/(a+b+c)
print(round(var1,7))

round(var1,7)

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:50:50) 
-- CODE:
a=int( input("digite a") )
b=int( input("digite b") )
c=int( input("digite c") )
var1=(a**2+b**2+c**2)/(a+b+c)
print(round(var1,7))

round(var1,7)

-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
